--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <body>
         <h1>APP版本文件上传</h1>
-        <form method="POST" action="/upload" enctype="multipart/form-data">
+        <form method="POST" th:action="@{/upload}" enctype="multipart/form-data">
             <input type="file" name="file" /><br/><br/>
             <label>版本描述</label> <input type="text" name="desc" /><br/><br/>
             <label>版本号</label> <input type="text" name="appversion" /><br/><br/>
